FIX: spacing between main btns

--- a/src/styling/MainSection.css
+++ b/src/styling/MainSection.css
@@ -33,7 +33,7 @@
 
 .social-button {
   margin: 0 auto;
-  margin-bottom: 3rem;
+  margin-bottom: 40px;
 }
 .resume-button {
   display: flex;
